feat(auth): move login, register, logout to auth, secure all other endpoints
